Landing page video

--- a/4CADs.html
+++ b/4CADs.html
@@ -23,9 +23,8 @@
                 <a href="login.html">Log-in</a>
             </div>
         </header>
-        <video src=""></video>
-        <img src="Images\4CADs homepage image.png" alt="" width="100%">
-
+        <video width="101%" autoplay loop src="Videos\4CADs landing page.mp4"></video>
+    
     </body>
 </body>
 </html>
