Landing Page video commit x2

--- a/4CADs.html
+++ b/4CADs.html
@@ -23,7 +23,7 @@
                 <a href="login.html">Log-in</a>
             </div>
         </header>
-        <video width="101%" autoplay loop src="Videos\4CADs landing page.mp4"></video>
+        <video width="101%" loop autoplay src="Videos\4CADs landing page.mp4"></video>
     
     </body>
 </body>
