Landing Page Gif

--- a/4CADs.html
+++ b/4CADs.html
@@ -23,8 +23,8 @@
                 <a href="login.html">Log-in</a>
             </div>
         </header>
-        <video width="101%" loop autoplay src="Videos\4CADs landing page.mp4"></video>
     
+        <img width="101%" src="Videos\4CADs landing page.gif" alt="">
     </body>
 </body>
 </html>
