Navigation Bar(homepage)

--- a/4CADs.html
+++ b/4CADs.html
@@ -10,7 +10,14 @@
     <body>
     
         <header>
-    
+            <nav>
+                <ul>
+                    <li><a href="https://www.youtube.com">Home</a></li>
+                    <li><a href="https:/www.wikipedia.org">About</a></li>
+                    <li><a href="https://www.google.com">Google</a></li>
+                    <li><a href="https://www.pixabay.com">Contact Us</a></li>
+                </ul>
+               </nav>
             <div id="logo">
                 <img src="Images\logo-placeholder-image.png" alt="4CADS Logo">
             </div>
