--- a/4CADs.html
+++ b/4CADs.html
@@ -31,7 +31,7 @@
             </div>
         </header>
     
-        <img width="101%" src="Videos\4CADs landing page.gif" alt="">
+        <img style="width: 100%; height: auto; margin: 0; padding: 0;" src="Videos\4CADs landing page.gif" alt="">
     </body>
 </body>
 </html>
