--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -8,7 +8,7 @@
         
     </style>
     
-    <link rel="stylesheet" href="Materials.css">
+    <link rel="stylesheet" href="Materials Page\BEGINNER.css">
 
 </head>
 <body>
