Completed Project Report 2

--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -8,7 +8,7 @@
         
     </style>
     
-    <link rel="stylesheet" href="Materials Page\BEGINNER.css">
+    <link rel="stylesheet" href="BEGINNER.css">
 
 </head>
 <body>
@@ -19,14 +19,14 @@
 
         <div class="box-container">
 
-            <div class="box1">BAMBOO</div>
+            <div class="box1"> <a href="Material Content\Concrete.html">CONCRETE</a></div>
             <div class="box1">STEEL</div>
             <div class="box1">ALUMINIUM</div>
 
             <br></br>
 
             <div class="box2">RECYCLED PLASTIC</div>
-            <div class="box2">CONCRETE</div>
+            <div class="box2">BAMBOO</div>
             <div class="box2">WOOD</div>
 
         </div>
