--- a/4CADs.html
+++ b/4CADs.html
@@ -15,7 +15,7 @@
             </div>
             <nav class="navoptions">
                 <ul>
-                    <li ><a href="https://www.youtube.com">Home</a></li>
+                    <li ><a href="4CADs.html">Home</a></li>
                     
                 </ul>
                </nav>
@@ -37,8 +37,8 @@
     <br><br>
     <body class="secondbody">
         <div class="container">
-            <a href="https://commingsoon.com" class="box">BEGGINER
-                <div class="information"> Information about begginer <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur.</div>
+            <a href="Materials Page\BEGINNER.html" class="box">BEGGINER
+                <div class="information"> Information about begginer <br> <br> Click here if you're a beginner</div>
             </a>
             <a href="https://commingsoon.com" class="box">INTERMEDIATE
                 <div class="information"> Information about intermediate <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur.</div>
