--- a/4CADs.html
+++ b/4CADs.html
@@ -37,15 +37,9 @@
     <br><br>
     <body class="secondbody">
         <div class="container">
-            <a href="Materials Page\BEGINNER.html" class="box">BEGINNER
-                <div class="information"> Information about beginner <br> <br> Click here if you're a beginner</div>
-            </a>
-            <a href="https://commingsoon.com" class="box">INTERMEDIATE
-                <div class="information"> Information about intermediate <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur.</div>
-            </a>
-            <a href="https://commingsoon.com" class="box">ADVANCE
-                <div class="information"> Information about advance <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur.</div>
-            </a>
+            <a href="Materials Page\BEGINNER.html" class="box">BEGINNER <br> <br> Click here if you're a beginner </a>
+            <a href="https://commingsoon.com" class="box">INTERMEDIATE <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur. </a>
+            <a href="https://commingsoon.com" class="box">ADVANCE <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur.  </a>
         </div>
     </body>
 </body>
