--- a/4CADs.html
+++ b/4CADs.html
@@ -33,13 +33,29 @@
         
         
     </body>
-    <br><br>
+    <br> <br>
+    <div class="title"> <b> <h1>Choose your knowledge level: </h1></b> </div>
+
     <body class="secondbody">
         <div class="container">
             <a href="Materials Page\BEGINNER.html" class="box">BEGINNER <br> <br> Click here if you're a beginner </a>
             <a href="https://commingsoon.com" class="box">INTERMEDIATE <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur. </a>
             <a href="https://commingsoon.com" class="box">ADVANCE <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur.  </a>
         </div>
+        <p class="paragraph">SOme information.</p>
+
+        <br> <br> <br> <br> 
+        <footer>
+            <div class="ParaImage">
+                <img src="Images/Whatsaap.png" alt="Img 1">
+                <img src="Images/Instagram.png" alt="Img 2">
+                <img src="Images/X.png" alt="Img 3">
+                <img src="Images/LinkedIn (19).png" alt="Img 4">
+            </div>
+            <p> 
+                <b><u> Contact Us </u></b>
+            </p>
+        </footer>
     </body>
 </body>
 </html>
