--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -12,7 +12,19 @@
 
 </head>
 <body>
+    <nav class="navbar">
+        <!-- Logo Section -->
+        <a href="4CADs.html"><div class="logo"><img src="Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
 
+        <!--Search Section-->
+        <div class="search-container">
+            <input type="text" placeholder="Search Materials..." class="search-bar">
+            <button class="search-btn" >
+                <img src="Images\Search Icon.svg" alt="Search Icon" class="search-icon">
+            </button>
+        </div>
+    </nav>
+    <video autoplay muted loop id="background" src="/Videos/video background.mp4"></video>
     <div class="container">
         <h1>BEGINNER</h1>
         <h2>MATERIALS</h2>
