Completed home screen(phase 2)
This also includes edits made to the Materials page

--- a/4CADs.html
+++ b/4CADs.html
@@ -27,27 +27,28 @@
         
     </body>
     <br> <br>
-    <div class="title"> <b> <h1>Choose your knowledge level: </h1></b> </div>
+    <div class="title"> <b> <h1>Choose your knowledge level</h1></b> </div>
 
     <body class="secondbody">
         <div class="container">
-            <a href="Materials Page\BEGINNER.html" class="box">BEGINNER <br> <br> Click here if you're a beginner </a>
-            <a href="https://commingsoon.com" class="box">INTERMEDIATE <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur. </a>
-            <a href="https://commingsoon.com" class="box">ADVANCE <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam blanditiis repellat dolores quaerat, aspernatur nostrum facere, ea id voluptas, corporis sunt vitae maiores iusto. Voluptatibus repellat corporis ad tenetur.  </a>
-        </div>
+            <a href="Materials Page\BEGINNER.html" > <div class="box" id="beginner"><div class="level-text"><h3>BEGINNER</h3> <br>Start here with essentials that are easy to work with</div></div></a>
+            <a href="#"><div class="box" id="intermediate"><div class="level-text"><h3>INTERMEDIATE</h3><br>Explore more options to deepen your design skills</div></div></a>
+            <a href="#"><div class="box" id="advanced"><div class="level-text"><h3>ADVANCED</h3><br>Discover expert materials to elevate your projects</div></div></a>
+        </div><br><br><br>
+        <h2>About us</h2>
         <p class="paragraph">SOme information.</p>
 
         <br> <br> <br> <br> 
-        <footer>
+        <footer class="footer">
             <div class="ParaImage">
-                <img src="Images/Whatsaap.png" alt="Img 1">
-                <img src="Images/Instagram.png" alt="Img 2">
-                <img src="Images/X.png" alt="Img 3">
-                <img src="Images/LinkedIn (19).png" alt="Img 4">
+                <img class="contact-pics" src="Images/Whatsaap.png" alt="Img 1">
+                <img class="contact-pics" src="Images/Instagram.png" alt="Img 2">
+                <img class="contact-pics" src="Images/X.png" alt="Img 3">
+                <img class="contact-pics" src="Images/LinkedIn (20).png" alt="Img 4">
+                
             </div>
-            <p> 
-                <b><u> Contact Us </u></b>
-            </p>
+            <img class="footermage" src="/Images/Navlogo.png" alt="logo">
+            <a href="#"><p style="text-decoration: underline;" class="contact-pics">Contact Us</p></a>
         </footer>
     </body>
 </body>
