--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -9,29 +9,31 @@
     </style>
     
     <link rel="stylesheet" href="BEGINNER.css">
-
+    <link rel="stylesheet" href="4CADs.css">
 </head>
 <body>
     <nav class="navbar">
         <!-- Logo Section -->
-        <a href="4CADs.html"><div class="logo"><img src="Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
+        <a href="/4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
 
         <!--Search Section-->
         <div class="search-container">
             <input type="text" placeholder="Search Materials..." class="search-bar">
             <button class="search-btn" >
-                <img src="Images\Search Icon.svg" alt="Search Icon" class="search-icon">
+                <img src="/Images/Search icon.svg " alt="Search Icon" class="search-icon">
             </button>
         </div>
     </nav>
+
     <video autoplay muted loop id="background" src="/Videos/video background.mp4"></video>
     <div class="container">
-        <h1>BEGINNER</h1>
+       <div class="title"> <h1>BEGINNER</h1>
         <h2>MATERIALS</h2>
+    </div>
 
         <div class="box-container">
 
-            <div class="box1"> <a href="Material Content\Concrete.html">CONCRETE</a></div>
+            <div class="box1"> <a href="Material Content\Concrete.html"><h3>CONCRETE</h3></a></div>
             <div class="box1">STEEL</div>
             <div class="box1">ALUMINIUM</div>
 
