--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -33,15 +33,15 @@
 
         <div class="box-container">
 
-            <div class="box1"> <a href="Material Content\Concrete.html"><h3>CONCRETE</h3></a></div>
-            <div class="box1">STEEL</div>
-            <div class="box1">ALUMINIUM</div>
+            <div class="CONCRETE"> <a href="Material Content\Concrete.html"><h3>CONCRETE</h3></a></div>
+            <div class="STEEL">STEEL</div>
+            <div class="ALUMINIUM">ALUMINIUM</div>
 
             <br></br>
 
-            <div class="box2">RECYCLED PLASTIC</div>
-            <div class="box2">BAMBOO</div>
-            <div class="box2">WOOD</div>
+            <div class="RECYCLED-PLASTIC">RECYCLED PLASTIC</div>
+            <div class="BAMBOO">BAMBOO</div>
+            <div class="WOOD">WOOD</div>
 
         </div>
     </div>
