--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -33,15 +33,15 @@
 
         <div class="box-container">
 
-            <div class="CONCRETE"> <a href="Material Content\Concrete.html"><h3>CONCRETE</h3></a></div>
-            <div class="STEEL">STEEL</div>
-            <div class="ALUMINIUM">ALUMINIUM</div>
+            <div class="WOOD"> <a href="Material Content\Concrete.html"><h3>WOOD</h3></a></div>
+            <div class="STEEL"> <a href="#"> STEEL</a></div>
+            <div class="ALUMINIUM"><a href="#"> ALUMINIUM</a></div>
 
             <br></br>
 
             <div class="RECYCLED-PLASTIC">RECYCLED PLASTIC</div>
             <div class="BAMBOO">BAMBOO</div>
-            <div class="WOOD">WOOD</div>
+            <div class="CONCRETE">CONCRETE</div>
 
         </div>
     </div>
