Damaris's woodpage adjustments

--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -33,7 +33,7 @@
 
         <div class="box-container">
 
-            <div class="WOOD"> <a href="Material Content\Concrete.html"><h3>WOOD</h3></a></div>
+            <div class="WOOD"> <a href="/Materials Page/Material Content/wood.html"><h3>WOOD</h3></a></div>
             <div class="STEEL"> <a href="#"> STEEL</a></div>
             <div class="ALUMINIUM"><a href="#"> ALUMINIUM</a></div>
 
