--- a/Materials Page/Material Content/wood.html
+++ b/Materials Page/Material Content/wood.html
@@ -7,11 +7,24 @@
     <link rel="stylesheet" href="wood.css">
 </head>
 <body>
+    <nav class="navbar">
+        <!-- Logo Section -->
+        <a href="/4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
 
-    <div class="container"></div>
+        <!--Search Section-->
+        <div class="search-container">
+            <input type="text" placeholder="Search Materials..." class="search-bar">
+            <button class="search-btn" >
+                <img src="/Images/Search icon.svg " alt="Search Icon" class="search-icon">
+            </button>
+        </div>
+    </nav>
+
+    <div class="image"></div>
+    <div class="content">
     <div class="description">
-        <h1 id="woodtittle">Wood</h1>
-        <h2 id="descriptiontittle">Description:</h2>
+        <h1 id="woodtitle">Wood</h1>
+        <h2 id="descriptiontitle">Description:</h2>
             <p id="text1">Wood is a natural, organic material sourced from trees. It's widely used in 
                 construction, furniture making, and crafting due to its strength, versatility, and ease of use. 
                 Different types of wood, such as hardwood and softwood, offer varying properties.
@@ -42,6 +55,6 @@
                 carbon footprint include improving kiln efficiency and using alternative materials in production. 
              </p>
     </div>
-
+</div>
 </body>
 </html>
