Abou Us and footer placed

--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <!-- Logo Section -->
         <a href="/4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
-
+        <div class="divabout"><a class="aboutus" href="#">About Us</a></div>
         <!--Search Section-->
         <div class="search-container">
             <input type="text" placeholder="Search Materials..." class="search-bar">
@@ -25,10 +25,9 @@
         </div>
     </nav>
 
-    <video autoplay muted loop id="background" src="/Videos/video background.mp4"></video>
+    <video autoplay muted loop id="background" src="/Videos/Video background.mp4"></video>
     <div class="container">
-       <div class="title"> <h1>BEGINNER</h1>
-        <h2>MATERIALS</h2>
+       <div class="title"> <h1>BEGINNER MATERIALS</h1>
     </div>
 
         <div class="box-container">
@@ -45,6 +44,16 @@
 
         </div>
     </div>
-
+    <footer class="footer">
+        <div class="ParaImage">
+            <img class="contact-pics" src="/Images/Whatsaap.png" alt="Img 1">
+            <img class="contact-pics" src="/Images/Instagram.png" alt="Img 2">
+            <img class="contact-pics" src="/Images/X.png" alt="Img 3">
+            <img class="contact-pics" src="/Images/LinkedIn (20).png" alt="Img 4">
+            
+        </div>
+        <img class="footermage" src="/Images/Navlogo.png" alt="logo">
+        <a href="#"><p style="text-decoration: underline;" class="contact-pics">Contact Us</p></a>
+    </footer>
 </body>
 </html>
