--- a/Materials Page/Material Content/wood.html
+++ b/Materials Page/Material Content/wood.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <!-- Logo Section -->
         <a href="/4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
-
+        <div class="divabout"><a class="aboutus" href="#">About Us</a></div>
         <!--Search Section-->
         <div class="search-container">
             <input type="text" placeholder="Search Materials..." class="search-bar">
@@ -19,6 +19,7 @@
             </button>
         </div>
     </nav>
+
 
     <div class="image"></div>
     <div class="content">
@@ -55,6 +56,18 @@
                 carbon footprint include improving kiln efficiency and using alternative materials in production. 
              </p>
     </div>
+    
 </div>
+<footer class="footer">
+    <div class="ParaImage">
+        <img class="contact-pics" src="/Images/Whatsaap.png" alt="Img 1">
+        <img class="contact-pics" src="/Images/Instagram.png" alt="Img 2">
+        <img class="contact-pics" src="/Images/X.png" alt="Img 3">
+        <img class="contact-pics" src="/Images/LinkedIn (20).png" alt="Img 4">
+        
+    </div>
+    <img class="footermage" src="/Images/Navlogo.png" alt="logo">
+    <a href="#"><p style="text-decoration: underline;" class="contact-pics">Contact Us</p></a>
+</footer>
 </body>
 </html>
