--- a/4CADs.html
+++ b/4CADs.html
@@ -36,8 +36,7 @@
             <a href="#"><div class="box" id="intermediate"><div class="level-text"><h3>INTERMEDIATE</h3><br>Explore more options to deepen your design skills</div></div></a>
             <a href="#"><div class="box" id="advanced"><div class="level-text"><h3>ADVANCED</h3><br>Discover expert materials to elevate your projects</div></div></a>
         </div><br><br><br>
-        <h2>About us</h2>
-        <p class="paragraph">SOme information.</p>
+        <h2> <a href="About_us.html" class="Aus"> About us </a> </h2>
 
         <br> <br> <br> <br> 
         <footer class="footer">
