Home page almost complete

--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -27,7 +27,7 @@
 
     <video autoplay muted loop id="background" src="/Videos/Video background.mp4"></video>
     <div class="container">
-       <div class="title"> <h1>BEGINNER MATERIALS</h1>
+       <div class="beginnertitle"> <h1>BEGINNER MATERIALS</h1>
     </div>
 
         <div class="box-container">
