--- a/About_us.html
+++ b/About_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="4CADs.css">
+    
     <link rel="stylesheet" href="About_us.css">
 </head>
 <body>
@@ -28,11 +28,11 @@
     Ipsa sapiente mollitia reiciendis vero, sequi, natus laboriosam eveniet impedit ut a id ducimus, consequuntur nulla non harum accusantium fuga totam odio. Nihil cupiditate modi, quia dignissimos facilis nemo nesciunt.
    </p>
    <br>
-   <img src="Images/HCAD Building.png" alt="" class="Aboutimg">
+  <div aboutusinfo> <img src="/Images/HCAD Building.png" alt="Hillier College of Architecture and Design" class="Aboutimg">
    <p class="Aboutp">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis commodi consequuntur placeat cumque. Amet consequatur tempora suscipit consectetur placeat assumenda ipsam nobis! Deserunt quaerat iusto ab facilis natus. Sequi, libero!
    Dolor expedita id laboriosam minus autem inventore vero doloribus tenetur similique explicabo. Fuga delectus eum nobis a inventore natus? Ipsum quos culpa, blanditiis quidem nesciunt quisquam! Fugiat voluptas consequuntur illum!
    Consectetur, voluptatem maxime nihil facilis qui officia odio dolores et beatae aliquid tenetur totam ea doloribus deserunt necessitatibus quasi magni fugit suscipit est explicabo? Est laborum sapiente voluptatum dicta reprehenderit?
-  </p>
+  </p></div>
   <br><br><br><br><br><br>
 </body>
 <footer class="Aboutfooter">
@@ -43,7 +43,9 @@
         <img class="contact-pics" src="Images/LinkedIn (20).png" alt="Img 4">
         
     </div>
-    <img class="footermage" src="/Images/Navlogo.png" alt="logo">
-    <a href="#"><p style="text-decoration: underline;" class="contact-pics">Contact Us</p></a>
+</div>
+<img class="footermage" src="/Images/Navlogo.png" alt="logo">
+<a href="#"><p style="text-decoration: underline;" class="contact-pics">Contact Us</p></a>
 </footer>
+</body>
 </html>
