another wood update

--- a/Materials Page/Material Content/wood.html
+++ b/Materials Page/Material Content/wood.html
@@ -28,7 +28,7 @@
             
             <div class="row my 5-g g-5 align-items-center">
                 <div class="col-6 col-lg-4.5">
-                    <img src="Wood.png" class="img-fluid border border-dark border-3"  alt="ebook" > 
+                    <img src="/Images/Wood.png" class="img-fluid border border-dark border-3"  alt="ebook" > 
                 </div>
 
                 <div class="col-lg-6">
