Completed about us. Materials page still in works

--- a/4CADs.html
+++ b/4CADs.html
@@ -32,11 +32,9 @@
             <a href="Materials Page\BEGINNER.html" > <div class="box" id="beginner"><div class="level-text"><h3>BEGINNER</h3> <br>Start here with essentials that are easy to work with</div></div></a>
             <a href="#"><div class="box" id="intermediate"><div class="level-text"><h3>INTERMEDIATE</h3><br>Explore more options to deepen your design skills</div></div></a>
             <a href="#"><div class="box" id="advanced"><div class="level-text"><h3>ADVANCED</h3><br>Discover expert materials to elevate your projects</div></div></a>
-        </div><br><br><br>
-        <div class="notsure"><h2>Unsure where to start?.
-
-        </h2>
-        <h3>Choose what number you think fits your expertise on our scale</h3></div>
+        </div>
+        <div class="notsure"><h2>Not sure where you fall ?</h2>
+        <div style=" font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Use our confidence scale, we'll suggest a level</div></div>
 
         <br> <br> <br> <br> 
         <footer class="footer">
@@ -47,9 +45,11 @@
                 <img class="contact-pics" src="Images/LinkedIn (20).png" alt="Img 4">
                 
             </div>
-            <img class="footermage" src="/Images/Navlogo.png" alt="logo">
-            <a href="#"><p style="text-decoration: underline;" class="contact-pics">Contact Us</p></a>
+            
+            <p style="text-decoration: underline;" class="contact-pics"> <p>&copy; 2024 4CADs | All rights reserved.</p></p></a>
+            <div class="contactus"><a  href="mailto:srs243@njit.edu,gr379@njit.edu,de262@njit.edu,jda64@njit.edu">Contact Us</a></div>
         </footer>
+        <script src="notsure.js" defer></script>
     </body>
 </body>
 </html>
