--- a/About_us.html
+++ b/About_us.html
@@ -37,7 +37,7 @@
 
         </p><br>
 
-        <h2>Checkout Our Majors at NJIT</h2>
+        <h2>Check Out Our Majors at NJIT</h2>
         <section class="majors">
             
             <div class="image-links">
