--- a/4CADs.html
+++ b/4CADs.html
@@ -46,7 +46,7 @@
                 
             </div>
             
-            <p style="text-decoration: underline;" class="contact-pics"> <p>&copy; 2024 4CADs | All rights reserved.</p></p></a>
+            <p style="text-decoration: underline;" class="contact-pics"> <p style="position: relative; right: 60px;">&copy; 2024 4CADs | All rights reserved.</p></p></a>
             <div class="contactus"><a  href="mailto:srs243@njit.edu,gr379@njit.edu,de262@njit.edu,jda64@njit.edu">Contact Us</a></div>
         </footer>
         <script src="notsure.js" defer></script>
