correct relative path for pinewood

--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -32,7 +32,7 @@
 
             <!--Learn about the properties and uses of pinewood materials.-->
 
-            <a href="/Materials Page/Material Content/wood.html"><div class="PINEWOOD"> <h3>PINEWOOD</h3> <p class="description">Learn about the properties and uses of pinewood materials.</p></div></a>
+            <a href="/Materials Page/Material Content/Pinewood.html"><div class="PINEWOOD"> <h3>PINEWOOD</h3> <p class="description">Learn about the properties and uses of pinewood materials.</p></div></a>
             <a href="#"><div class="TEXTILES"> <h3>TEXTILES</h3> <p class="description">Learn about the properties and uses of textiles materials.</p> </div></a>
             <a href="#"><div class="RUBBER"> <h3>RUBBER</h3> <p class="description">Learn about the properties and uses of rubber materials.</p> </div></a>
             <a href="#"><div class="CARDBOARD"> <h3>CARDBOARD</h3> <p class="description">Learn about the properties and uses of cardboard materials.</p> </div></a>
