Beginner page updated

--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -39,10 +39,10 @@
 
             <br></br>
 
-            <div class="BAMBOO"> <a href="/Materials Page/Material Content/wood.html"><h3>BAMBOO</h3></a> <p class="description">Learn about the properties and uses of bamboo materials.</p></div>
-            <div class="CORK"> <a href="#"> CORK</a> <p class="description">Learn about the properties and uses of cork materials.</p> </div>
-            <div class="CLAY"><a href="#"> CLAY</a> <p class="description">Learn about the properties and uses of clay materials.</p> </div>
-            <div class="BASSWOOD"><a href="#"> BASSWOOD</a> <p class="description">Learn about the properties and uses of basswood materials.</p> </div>
+            <a href="/Materials Page/Material Content/wood.html"><div class="BAMBOO"> <h3>BAMBOO</h3> <p class="description">Learn about the properties and uses of bamboo materials.</p></div></a>
+            <a href="#"><div class="CORK"> <h3>CORK</h3> <p class="description">Learn about the properties and uses of cork materials.</p> </div></a>
+            <a href="#"><div class="CLAY"> <h3>CLAY</h3> <p class="description">Learn about the properties and uses of clay materials.</p> </div></a>
+            <a href="#"><div class="BASSWOOD"> <h3>BASSWOOD</h3> <p class="description">Learn about the properties and uses of basswood materials.</p> </div></a>
             
 
         </div>
