--- a/Materials Page/Material Content/Pinewood.html
+++ b/Materials Page/Material Content/Pinewood.html
@@ -16,7 +16,7 @@
   </head>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbars">
         <!-- Logo Section -->
         <a href="4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
        <div class="divabout"><a class="aboutus" href="/About_us.html">About Us</a></div>
