Updated Pinewood page

--- a/Materials Page/Material Content/Pinewood.html
+++ b/Materials Page/Material Content/Pinewood.html
@@ -18,12 +18,12 @@
 <body>
     <nav class="navbars">
         <!-- Logo Section -->
-        <a href="4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
-       <div class="divabout"><a class="aboutus" href="/About_us.html">About Us</a></div>
+        <a href="/4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
+       <div class="divabout"><a class="aboutus" href="/About_us.html" style="text-decoration: none;">About Us</a></div>
 
         <!--Search Section-->
         <div class="search-container">
-            <input type="text" placeholder="Search Materials..." class="search-bar">
+            <input type="text" style="font-size:14px ;" placeholder="Search Materials..." class="search-bar">
             <button class="search-btn" >
                 <img src="/Images/Search icon.svg" alt="Search Icon" class="search-icon">
             </button>
@@ -183,6 +183,9 @@
         </div>
     </div>
     </section>
+
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
