--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -63,25 +63,114 @@
 
     </style>
 
-        <div class="box-container">
-
-            <!--Learn about the properties and uses of pinewood materials.-->
-
-            <a href="/Materials Page/Material Content/Pinewood.html"><div class="PINEWOOD"> <h3>PINEWOOD</h3> <p class="description">Learn about the properties and uses of pinewood materials.</p></div></a>
-            <a href="#"><div class="TEXTILES"> <h3>TEXTILES</h3> <p class="description">Learn about the properties and uses of textiles materials.</p> </div></a>
-            <a href="#"><div class="RUBBER"> <h3>RUBBER</h3> <p class="description">Learn about the properties and uses of rubber materials.</p> </div></a>
-            <a href="#"><div class="CARDBOARD"> <h3>CARDBOARD</h3> <p class="description">Learn about the properties and uses of cardboard materials.</p> </div></a>
-
-            <br></br>
-
-            <a href="/Materials Page/Material Content/wood.html"><div class="BAMBOO"> <h3>BAMBOO</h3> <p class="description">Learn about the properties and uses of bamboo materials.</p></div></a>
-            <a href="#"><div class="CORK"> <h3>CORK</h3> <p class="description">Learn about the properties and uses of cork materials.</p> </div></a>
-            <a href="#"><div class="CLAY"> <h3>CLAY</h3> <p class="description">Learn about the properties and uses of clay materials.</p> </div></a>
-            <a href="#"><div class="BASSWOOD"> <h3>BASSWOOD</h3> <p class="description">Learn about the properties and uses of basswood materials.</p> </div></a>
-            
-
+<div class="card-container">
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background" style=" background-image: url('../Images/Pinewood.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
         </div>
     </div>
+</div>
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background"  style=" background-image: url('../Images/Textile.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
+        </div>
+    </div>
+</div>
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background"  style=" background-image: url('../Images/Rubber.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
+        </div>
+    </div>
+</div>
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background"  style=" background-image: url('../Images/Cardboard.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
+        </div>
+    </div>
+</div>
+
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background"  style=" background-image: url('../Images/Bamboo.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
+        </div>
+    </div>
+</div>
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background"  style=" background-image: url('../Images/Cork.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
+        </div>
+    </div>
+</div>
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background"  style=" background-image: url('../Images/Clay.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
+        </div>
+    </div>
+</div>
+
+<div class="card" >
+    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <div class="card-background"  style=" background-image: url('../Images/Basswood.png');"></div>
+    <div class="card-content">
+        <div class="card-title">PINEWOOD</div>
+        <div class="card-description">
+            Learn about the properties and uses of pinewood materials.
+        </div>
+    </div>
+</div>
+
+</div>
+        <!--Learn about the properties and uses of pinewood materials.-->
+
+        <!-- <a href="/Materials Page/Material Content/Pinewood.html">
+            <div class="PINEWOOD cards"> 
+                <h3>PINEWOOD</h3> 
+                <p class="description">Learn about the properties and uses of pinewood materials.</p>
+            </div>
+        </a>
+
+
+        <a href="#"><div class="TEXTILES"> <h3>TEXTILES</h3> <p class="description">Learn about the properties and uses of textiles materials.</p> </div></a>
+        <a href="#"><div class="RUBBER"> <h3>RUBBER</h3> <p class="description">Learn about the properties and uses of rubber materials.</p> </div></a>
+        <a href="#"><div class="CARDBOARD"> <h3>CARDBOARD</h3> <p class="description">Learn about the properties and uses of cardboard materials.</p> </div></a>
+
+        <br></br>
+
+        <a href="/Materials Page/Material Content/wood.html"><div class="BAMBOO"> <h3>BAMBOO</h3> <p class="description">Learn about the properties and uses of bamboo materials.</p></div></a>
+        <a href="#"><div class="CORK"> <h3>CORK</h3> <p class="description">Learn about the properties and uses of cork materials.</p> </div></a>
+        <a href="#"><div class="CLAY"> <h3>CLAY</h3> <p class="description">Learn about the properties and uses of clay materials.</p> </div></a>
+        <a href="#"><div class="BASSWOOD"> <h3>BASSWOOD</h3> <p class="description">Learn about the properties and uses of basswood materials.</p> </div></a>
+         -->
+
+   
     <footer class="navbar"> <!--PROBLEM-->
         <div class="ParaImage">
             <style>
